<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/emptyFragment">

    <fragment
        android:id="@+id/emptyFragment"
        android:name="hcmute.edu.vn.nhom6.foody_06.Fragment.EmptyFragment"
        tools:layout="@layout/fragment_empty">
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="hcmute.edu.vn.nhom6.foody_06.Fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/cartFragment"
        android:name="hcmute.edu.vn.nhom6.foody_06.Fragment.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart">

        <action
            android:id="@+id/action_ramdomFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="hcmute.edu.vn.nhom6.foody_06.Fragment.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_ramdomFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
</navigation>